# pydebugviz

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_tests.yml
pydebugviz/: __init__.py  cli.py  debug.py  debug_session.py  export.py  utils.py
pydebugviz-1.5/: README.md  setup.py
pydebugviz-1.5/pydebugviz/: live.py  summary.py
tests/: test_export.py  test_session.py  test_summary.py  test_utils.py  test_vardiff.py
