[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydebugviz"
version = "1.0.1"
description = "Time-travel debugger and visualization toolkit for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name="Kyle Koeller" }
]
dependencies = [
  "pandas>=1.4.2",
  "ipywidgets>=8.1",
  "networkx>=3.0",
  "matplotlib>=3.5.1"
]

[project.urls]
Homepage = "https://github.com/kjkoeller/pydebugviz"
Documentation = "https://github.com/kjkoeller/pydebugviz"
